# pilotlogbook

./: LICENCE  README.md  changelog.md  default.nix  pilotlogbook.cabal  pilotlogbook.nix
ci/: ci.nix  jobsets.json  jobsets.nix
src/Data/Aviation/: PilotLogbook.hs
src/Data/Aviation/PilotLogbook/: ARN.hs  Aircraft.hs  AircraftCategory.hs  AircraftFlightExpense.hs  AircraftFlightExpenseType.hs  AircraftFlightTime.hs  AircraftRegistration.hs  AircraftType.hs  Caption.hs  Currency.hs  ExpenseRate.hs  ExpenseTotal.hs  Firstname.hs  FlightSimulator.hs  FlightSimulatorType.hs  HGFAMembership.hs  Image.hs  ImageFormat.hs  JetType.hs  Location.hs  Media.hs  Name.hs  Person.hs  Propulsion.hs  PropulsionLateralPosition.hs  PropulsionType.hs  RAMembership.hs  Route.hs  Runway.hs  SimulatorFlightExpense.hs  SimulatorFlightExpenseType.hs  SimulatorFlightTime.hs  SixMinuteTime.hs  Sound.hs  SoundFormat.hs  Source.hs  Surname.hs  TrackLog.hs  TrackLogFormat.hs  UAVCategory.hs  (+9 more)
