name:                 pilotlogbook
version:              0.0.1
synopsis:             Pilot Logbook
description:          Pilot Logbook
license:              BSD3
license-file:         LICENCE
author:               Tony Morris <ʇǝu˙sıɹɹoɯʇ@llǝʞsɐɥ>
maintainer:           Tony Morris <ʇǝu˙sıɹɹoɯʇ@llǝʞsɐɥ>
copyright:            Copyright (C) 2018 Tony Morris
category:             Control
build-type:           Simple
extra-source-files:   changelog.md
cabal-version:        >=1.10
homepage:             https://github.com/pilotlogbook/pilotlogbook
bug-reports:          https://github.com/pilotlogbook/pilotlogbook/issues
tested-with:          GHC == 8.0.2
                    , GHC == 8.2.2
                    , GHC == 8.4.3

source-repository     head
  type:               git
  location:           git@github.com:pilotlogbook/pilotlogbook.git

library
  exposed-modules:    Data.Aviation.PilotLogbook
                    , Data.Aviation.PilotLogbook.Aircraft
                    , Data.Aviation.PilotLogbook.AircraftCategory
                    , Data.Aviation.PilotLogbook.AircraftFlightExpense
                    , Data.Aviation.PilotLogbook.AircraftFlightExpenseType
                    , Data.Aviation.PilotLogbook.AircraftFlightTime
                    , Data.Aviation.PilotLogbook.AircraftRegistration
                    , Data.Aviation.PilotLogbook.AircraftType
                    , Data.Aviation.PilotLogbook.ARN
                    , Data.Aviation.PilotLogbook.Caption
                    , Data.Aviation.PilotLogbook.Currency
                    , Data.Aviation.PilotLogbook.ExpenseRate
                    , Data.Aviation.PilotLogbook.ExpenseTotal
                    , Data.Aviation.PilotLogbook.Firstname
                    , Data.Aviation.PilotLogbook.FlightSimulator
                    , Data.Aviation.PilotLogbook.FlightSimulatorType
                    , Data.Aviation.PilotLogbook.HGFAMembership
                    , Data.Aviation.PilotLogbook.Image
                    , Data.Aviation.PilotLogbook.ImageFormat
                    , Data.Aviation.PilotLogbook.JetType
                    , Data.Aviation.PilotLogbook.Media
                    , Data.Aviation.PilotLogbook.Name
                    , Data.Aviation.PilotLogbook.Person
                    , Data.Aviation.PilotLogbook.Propulsion
                    , Data.Aviation.PilotLogbook.PropulsionLateralPosition
                    , Data.Aviation.PilotLogbook.PropulsionType
                    , Data.Aviation.PilotLogbook.RAMembership
                    , Data.Aviation.PilotLogbook.Route
                    , Data.Aviation.PilotLogbook.Runway
                    , Data.Aviation.PilotLogbook.SimulatorFlightExpense
                    , Data.Aviation.PilotLogbook.SimulatorFlightExpenseType
                    , Data.Aviation.PilotLogbook.SimulatorFlightTime
                    , Data.Aviation.PilotLogbook.SixMinuteTime
                    , Data.Aviation.PilotLogbook.Sound
                    , Data.Aviation.PilotLogbook.SoundFormat
                    , Data.Aviation.PilotLogbook.Source
                    , Data.Aviation.PilotLogbook.Surname
                    , Data.Aviation.PilotLogbook.TrackLog
                    , Data.Aviation.PilotLogbook.TrackLogFormat
                    , Data.Aviation.PilotLogbook.UAVCategory
                    , Data.Aviation.PilotLogbook.UAVControl
                    , Data.Aviation.PilotLogbook.Video
                    , Data.Aviation.PilotLogbook.VideoFormat
                    , Data.Aviation.PilotLogbook.Visualisation
                    , Data.Aviation.PilotLogbook.VisualisationFormat
                    , Data.Aviation.PilotLogbook.Waypoint
                    , Data.Aviation.PilotLogbook.WaypointArrival
                    , Data.Aviation.PilotLogbook.WaypointArrivalType
                    , Data.Aviation.PilotLogbook.WaypointTerminal

  build-depends:      base              >= 4.8     && < 4.12
                    , lens              >= 4.15    && < 4.18
                    , vfr-waypoints     >= 0.1.0.2 && < 0.2
                    , geodetic-types    >= 0.0.1   && < 0.1
                    , papa              >= 0.3.1   && < 0.4
                    , alphachar         >= 0.0.3   && < 1.0
                    , dimensional       >= 1.1     && < 1.2
                    , digit             >= 0.6     && < 1.0
                    , natural           >= 0.3.0.2 && < 1.0.0.0
                    , time              >= 1.5     && < 2
                    , modern-uri        >= 0.2     && < 0.3

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -ddump-splices
  if impl(ghc<8.0.1)
    build-depends:    semigroups        >= 0.9     && < 0.19

test-suite            tests
  build-depends:      QuickCheck        >= 2.9.2   && < 2.12
                    , base              >= 4.8     && < 4.12
                    , checkers          >= 0.4.6   && < 0.5
                    , hedgehog          >= 0.5     && < 0.7
                    , tasty             >= 0.11    && < 1.2
                    , tasty-hunit       >= 0.9     && < 0.11
                    , tasty-hedgehog    >= 0.1     && < 0.3
                    , tasty-quickcheck  >= 0.8.4   && < 0.11
                    , transformers      >= 0.4.1   && < 5.5
                    , pilotlogbook
  type:               exitcode-stdio-1.0
  main-is:            Tests.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -Wall
